--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,8 @@
-# Uncomment the following lines to enable the Choco RGB Underglow
+# Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Choco OLED Display
+# Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
