--- a/build.yaml
+++ b/build.yaml
@@ -5,7 +5,7 @@
 # the `include` property, e.g:
 #
 # board: [ "nice_nano_v2" ]
-# shield: [ "chocofi_left", "chocofi_right" ]
+# shield: [ "corne_left", "corne_right" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: chocofi_left nice_view_adapter nice_view_gem
+    shield: corne_left nice_view_adapter nice_view_gem
   - board: nice_nano_v2
-    shield: chocofi_right nice_view_adapter nice_view_gem
+    shield: corne_right nice_view_adapter nice_view_gem
