--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_KEYBOARD_NAME="Ambient Whisper"
