--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,5 +6,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_PHY_2M=n
 
 CONFIG_ZMK_KEYBOARD_NAME="Ambient Whisper"
